# expression-jit

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
crates/expr-core/: Cargo.toml
crates/expr-core/src/: ast.rs  lib.rs
crates/expr-parse/: Cargo.toml
crates/expr-parse/src/: lexer.rs  lib.rs  parser.rs
crates/expr-x86/: Cargo.toml
crates/expr-x86/src/: codegen.rs  encoding.rs  lib.rs  runtime.rs
